--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,3 +45,40 @@ div.swiper-button-prev:hover {
 .swiper-pagination-bullet-active {
   background-color: var(--brandColor) !important;
 }
+
+/* .showCase-movieList-1 .swiper-slide {
+  width: 15% !important;
+} */
+
+.showCase-movieList-1 .swiper-slide {
+  transition: all 250ms ease-in;
+  padding-top: 3.5rem;
+  padding-bottom: 4rem;
+  /* padding-right: 1rem;
+  padding-left: 1rem; */
+  overflow: hidden;
+  position: relative;
+}
+
+.showCase-movieList-1 .swiper-wrapper:hover .swiper-slide {
+  z-index: 1000;
+  opacity: 0.3 !important;
+}
+.showCase-movieList-1 .swiper-wrapper:hover .swiper-slide:hover {
+  transform: scale(1.3) !important;
+  opacity: 1 !important;
+  z-index: 1001;
+}
+/* .showCase-movieList-1 .swiper-wrapper:hover .swiper-slide a:hover {
+  color: var(--brandColor);
+  z-index: 1001;
+} */
+.showCase-movieList-1 .swiper-wrapper:hover .swiper-slide:hover .card-body {
+  bottom: 0;
+  z-index: 1001;
+}
+
+.showCase-movieList-1 .swiper-wrapper:hover .swiper-slide:hover .card-body a {
+  color: var(--txt-color);
+  z-index: 1001;
+}
