Made footer sticky

--- a/frontend/src/pages/Home.module.css
+++ b/frontend/src/pages/Home.module.css
@@ -13,9 +13,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: -1.5rem;
-  /* margin-bottom: 2rem; */
-  /* margin-bottom: 0.5rem; */
+  /* margin-bottom: -1.5rem;
+  margin-bottom: 2rem;
+  margin-bottom: 0.5rem; */
 }
 .showCase-title-1 h2 {
   margin: 0;
