--- a/frontend/src/Components/Layout/Footer.module.css
+++ b/frontend/src/Components/Layout/Footer.module.css
@@ -1,8 +1,3 @@
-.footer {
-  display: flex;
-  /* min-height: 100vh; */
-  flex-direction: column;
-}
 footer {
   background-image: url(../../assets/footer-bg.jpg);
   background-repeat: no-repeat;
@@ -10,10 +5,10 @@ footer {
   background-position: center;
   /* height: 5rem; */
   padding: 1rem 2rem;
+  position: sticky;
+  top: 100vh;
 }
-.bottom-push {
-  flex: 1;
-}
+
 .footer-logo {
   display: flex;
   justify-content: center;
