--- a/frontend/src/Components/Layout/Footer.module.css
+++ b/frontend/src/Components/Layout/Footer.module.css
@@ -1,12 +1,12 @@
+.bottom-push {
+  flex: 1;
+}
 footer {
   background-image: url(../../assets/footer-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  /* height: 5rem; */
   padding: 1rem 2rem;
-  position: sticky;
-  top: 100vh;
 }
 
 .footer-logo {
