--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,8 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -81,4 +83,8 @@ div.swiper-button-prev:hover {
 .showCase-movieList-1 .swiper-wrapper:hover .swiper-slide:hover .card-body a {
   color: var(--txt-color);
   z-index: 1001;
+}
+
+.image-gallery-content .image-gallery-slide .image-gallery-image {
+  max-height: unset !important;
 }
