--- a/frontend/src/pages/Detail.module.css
+++ b/frontend/src/pages/Detail.module.css
@@ -79,6 +79,7 @@
   font-size: 0.8rem;
   font-weight: 600;
   background-color: var(--color1);
+  margin-right: 0.5rem;
 }
 .movie-overview {
   grid-row: 3/4;
@@ -105,7 +106,7 @@
   grid-row: 5/6;
   color: #fff;
   background-color: #28a745;
-  border-radius: 30px;
+  border-radius: 8px;
   border: 2px solid #28a745;
   /* width: 30%; */
   padding: 0.375rem 0.75rem;
@@ -113,4 +114,12 @@
   font-size: 1rem;
   cursor: pointer;
   margin-right: 0.5rem;
+}
+
+.similar {
+  padding: 0 2rem;
+  margin-bottom: 3rem;
+}
+.similar-header {
+  margin-bottom: 2rem;
 }
