--- a/frontend/src/pages/Detail.module.css
+++ b/frontend/src/pages/Detail.module.css
@@ -117,9 +117,12 @@
 }
 
 .similar {
+  max-width: 1200px;
+  margin: 0 auto;
   padding: 0 2rem;
   margin-bottom: 3rem;
 }
-.similar-header {
+
+/* .similar-header {
   margin-bottom: 2rem;
-}
+} */
