--- a/frontend/src/Components/Layout/Footer.module.css
+++ b/frontend/src/Components/Layout/Footer.module.css
@@ -7,6 +7,8 @@ footer {
   background-size: cover;
   background-position: center;
   padding: 1rem 2rem;
+  position: sticky;
+  z-index: 10;
 }
 
 .footer-logo {
