--- a/frontend/src/Components/UI/MovieGrid.module.css
+++ b/frontend/src/Components/UI/MovieGrid.module.css
@@ -55,3 +55,30 @@
   position: relative;
   z-index: 9;
 }
+
+.movie-search {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #fff;
+  width: 350px;
+  padding: 0 0.5rem;
+  border-radius: 30px;
+}
+input {
+  width: 100%;
+  height: 2rem;
+  padding: 0rem 0.75rem;
+  border-radius: 30px;
+  font-family: var(--font-family);
+  font-size: 1rem;
+  color: var(--color2);
+  border: 1px solid var(--color3);
+  background: #fff;
+  border: none;
+  outline: none;
+}
+.search-btn {
+  color: #adb5bd;
+  margin-right: auto;
+}
