Make header responsive for mobile devices

--- a/frontend/src/Components/UI/MovieGrid.module.css
+++ b/frontend/src/Components/UI/MovieGrid.module.css
@@ -57,6 +57,8 @@
 }
 
 .movie-search {
+  /* flex: 1; */
+  flex-basis: 40%;
   display: flex;
   align-items: center;
   justify-content: space-between;
