--- a/frontend/src/Components/Layout/Header.module.css
+++ b/frontend/src/Components/Layout/Header.module.css
@@ -12,6 +12,9 @@ header {
   padding: 1rem;
   max-width: 1200px;
   margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 nav ul {
   list-style-type: none;
@@ -92,15 +95,17 @@ nav ul {
 .logo {
   display: flex;
   align-items: center;
+  justify-content: unset;
   font-size: 2rem;
   font-weight: 600;
 }
-.logo a {
+/* .logo a {
   padding-bottom: 1.6875rem;
-}
+} */
 .logo img {
   margin-right: 10px;
-  padding-bottom: 1rem;
+  margin-top: 0.5rem;
+  /* padding-bottom: 1rem; */
 }
 
 /* .movie-search {
@@ -130,22 +135,24 @@ input {
   margin-right: auto;
 } */
 
-nav li:nth-child(3),
-nav li:nth-child(4),
-nav li:nth-child(5),
-nav li:nth-child(6) {
+nav li {
   font-weight: 700;
   font-size: 1.5rem;
 }
 nav ul {
   display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-end;
-  justify-content: space-between;
-  align-items: space-between;
-}
+  gap: 2rem;
 
-nav li:nth-child(2) {
+  flex-flow: row wrap;
+  /* justify-content: flex-end; */
+  justify-content: space-between;
+  align-items: center;
+}
+.mobile-nav-toggle,
+.menu-close {
+  display: none;
+}
+/* nav li:nth-child(2) {
   flex-basis: 40%;
   padding-top: 0.8rem;
 }
@@ -153,7 +160,199 @@ nav li:nth-child(3),
 nav li:nth-child(4),
 nav li:nth-child(5) {
   flex-basis: 5%;
-}
-nav li {
+} */
+/* nav li {
   padding-top: 0.5rem;
+} */
+
+/* main {
+  border: none;
+  margin: 0;
+}
+
+.menu-toggle,
+.main-menu .menu-close {
+  display: none;
+}
+
+.main-menu {
+  position: static;
+  display: block;
+}
+
+.main-menu ul {
+  padding: 0;
+  height: auto;
+  width: auto;
+  background: none;
+  overflow: hidden;
+  text-align: center;
+} */
+
+/* @media (max-width: 800px) {
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
+
+
+  .menu-toggle {
+    color: #333;
+    margin-right: 1rem;
+  }
+
+  .menu-toggle:hover,
+  .menu-toggle:focus {
+    color: var(--brandColor);
+  }
+
+  .main-menu {
+    position: fixed;
+    display: none;
+    left: -200px;
+    top: 0;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: visible;
+    transition: left 0.3s ease;
+    z-index: 999;
+  }
+
+  .main-menu ul {
+
+    margin: 0;
+    padding-top: 2.5em;
+    min-height: 100%;
+    width: 200px;
+    background-color: #1a1a1a;
+  }
+  .main-menu a {
+    display: block;
+    padding: 0.75rem;
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #383838;
+  }
+
+  .main-menu > :first-child {
+    border-bottom: 0px;
+  }
+  .main-menu li:first-child {
+    border-top: 1px solid #383838;
+  }
+  .main-menu a:hover,
+  .main-menu a:focus {
+    background: #333;
+    text-decoration: underline;
+  }
+
+  .main-menu .menu-close {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .main-menu:target {
+    display: block;
+    left: 0;
+    outline: none;
+  }
+  .main-menu:target .menu-close {
+    z-index: 1001;
+  }
+
+  .main-menu:target ul {
+    position: relative;
+    z-index: 1000;
+  }
+
+  .main-menu:target + .backdrop {
+    position: fixed;
+    display: block;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 998;
+    background: rgba(0, 0, 0, 0.85);
+    cursor: default;
+  }
+  main {
+    border-top: 2px solid #dddddd;
+    margin-top: 0.5rem;
+  }
+} */
+
+@media (max-width: 800px) {
+  .main-menu {
+    position: fixed;
+    z-index: 999;
+    inset: 0 0 0 30%;
+    padding-top: 10rem;
+    padding-left: 2rem;
+    flex-direction: column;
+    justify-content: unset;
+    align-items: flex-start;
+    background: hsl(0 0% 0% / 0.9);
+    backdrop-filter: blur(0.5rem);
+    transform: translateX(100%);
+    transition: transform 350ms ease-out;
+  }
+  .main-menu:target {
+    transform: translateX(0%);
+    z-index: 1001;
+  }
+
+  .mobile-nav-toggle {
+    display: block;
+    position: absolute;
+    z-index: 1000;
+    /* z-index: 9999; */
+    padding: 0;
+    border: none;
+    outline: none;
+    font: inherit;
+    color: inherit;
+    background: inherit;
+    width: 2rem;
+    aspect-ratio: 1;
+    top: 2rem;
+    right: 2rem;
+  }
+  .menu-close {
+    display: block;
+    position: absolute;
+    /* z-index: 9999; */
+    padding: 0;
+    border: none;
+    outline: none;
+    font: inherit;
+    color: inherit;
+    background: inherit;
+    width: 2rem;
+    aspect-ratio: 1;
+    top: 2rem;
+    right: 2rem;
+  }
+  .main-menu:target .menu-close {
+    z-index: 1002;
+  }
+  .main-menu:target + .backdrop {
+    position: fixed;
+    display: block;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 998;
+    /* background: rgba(0, 0, 0, 0.85); */
+    cursor: default;
+  }
 }
