--- a/frontend/src/Components/UI/MovieSlide.module.css
+++ b/frontend/src/Components/UI/MovieSlide.module.css
@@ -77,7 +77,7 @@ div.button-prev2 {
   display: grid;
   grid-template-rows: repeat(3, auto);
   grid-template-columns: auto;
-  padding: 0 3rem;
+  padding: 0 4rem;
 }
 
 .title {
@@ -146,4 +146,28 @@ div.button-prev2 {
   width: 400px;
   border-radius: 30px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+@media (max-width: 1020px) {
+  html {
+    font-size: 80%;
+  }
+  .poster {
+    display: none;
+  }
+  .info {
+    flex-basis: 75%;
+  }
+  .info h2 {
+    font-size: 4rem;
+  }
+}
+@media (max-width: 600px) {
+  html {
+    font-size: 60%;
+  }
+  .info {
+    flex-basis: 100%;
+    padding: 0 3rem;
+  }
 }
