--- a/frontend/src/Components/Layout/Header.module.css
+++ b/frontend/src/Components/Layout/Header.module.css
@@ -1,13 +1,12 @@
-.header {
-  /* background-color: var(--color1);
-  height: 5rem; */
+/* .header {
+ 
   height: 8rem;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 99;
-}
+} */
 header {
   padding: 1rem;
   max-width: 1200px;
@@ -16,6 +15,10 @@ header {
   justify-content: space-between;
   align-items: center;
 }
+/* .shrink {
+  height: 5rem !important;
+  background-color: #0f0f0f !important;
+} */
 nav ul {
   list-style-type: none;
   padding: 0;
@@ -152,145 +155,15 @@ nav ul {
 .menu-close {
   display: none;
 }
-/* nav li:nth-child(2) {
-  flex-basis: 40%;
-  padding-top: 0.8rem;
-}
-nav li:nth-child(3),
-nav li:nth-child(4),
-nav li:nth-child(5) {
-  flex-basis: 5%;
-} */
-/* nav li {
-  padding-top: 0.5rem;
-} */
-
-/* main {
-  border: none;
-  margin: 0;
-}
-
-.menu-toggle,
-.main-menu .menu-close {
-  display: none;
-}
-
-.main-menu {
-  position: static;
-  display: block;
-}
-
-.main-menu ul {
-  padding: 0;
-  height: auto;
-  width: auto;
-  background: none;
-  overflow: hidden;
-  text-align: center;
-} */
-
-/* @media (max-width: 800px) {
-  .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    border: 0;
-  }
-
-
-  .menu-toggle {
-    color: #333;
-    margin-right: 1rem;
-  }
-
-  .menu-toggle:hover,
-  .menu-toggle:focus {
-    color: var(--brandColor);
-  }
-
-  .main-menu {
-    position: fixed;
-    display: none;
-    left: -200px;
-    top: 0;
-    height: 100%;
-    overflow-y: auto;
-    overflow-x: visible;
-    transition: left 0.3s ease;
-    z-index: 999;
-  }
-
-  .main-menu ul {
-
-    margin: 0;
-    padding-top: 2.5em;
-    min-height: 100%;
-    width: 200px;
-    background-color: #1a1a1a;
-  }
-  .main-menu a {
-    display: block;
-    padding: 0.75rem;
-    color: #fff;
-    text-decoration: none;
-    margin-bottom: 5px;
-    border-bottom: 1px solid #383838;
-  }
-
-  .main-menu > :first-child {
-    border-bottom: 0px;
-  }
-  .main-menu li:first-child {
-    border-top: 1px solid #383838;
-  }
-  .main-menu a:hover,
-  .main-menu a:focus {
-    background: #333;
-    text-decoration: underline;
-  }
-
-  .main-menu .menu-close {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  .main-menu:target {
-    display: block;
-    left: 0;
-    outline: none;
-  }
-  .main-menu:target .menu-close {
-    z-index: 1001;
-  }
-
-  .main-menu:target ul {
-    position: relative;
-    z-index: 1000;
-  }
-
-  .main-menu:target + .backdrop {
-    position: fixed;
-    display: block;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 998;
-    background: rgba(0, 0, 0, 0.85);
-    cursor: default;
-  }
-  main {
-    border-top: 2px solid #dddddd;
-    margin-top: 0.5rem;
-  }
-} */
 
 @media (max-width: 800px) {
+  header {
+    justify-content: unset;
+  }
+  .logo {
+    flex-basis: 20%;
+    margin-right: 1rem;
+  }
   .main-menu {
     position: fixed;
     z-index: 999;
@@ -311,6 +184,7 @@ nav li:nth-child(5) {
   }
 
   .mobile-nav-toggle {
+    flex-basis: 12%;
     display: block;
     position: absolute;
     z-index: 1000;
@@ -325,6 +199,7 @@ nav li:nth-child(5) {
     aspect-ratio: 1;
     top: 2rem;
     right: 2rem;
+    margin-top: 0.5rem;
   }
   .menu-close {
     display: block;
@@ -354,5 +229,21 @@ nav li:nth-child(5) {
     z-index: 998;
     /* background: rgba(0, 0, 0, 0.85); */
     cursor: default;
+  }
+}
+
+@media (max-width: 600px) {
+  .mobile-nav-toggle {
+    top: 3rem;
+  }
+}
+
+@media (max-width: 500px) {
+  header {
+    flex-flow: row wrap;
+  }
+  .logo,
+  .mobile-nav-toggle {
+    order: 1;
   }
 }
