--- a/frontend/src/Components/UI/MovieGrid.module.css
+++ b/frontend/src/Components/UI/MovieGrid.module.css
@@ -7,7 +7,7 @@
     margin-bottom: 3rem; 
     ---------------------------------------------------------------------------------------------------------*/
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
   margin-bottom: 3rem;
 }
